--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </nav>
     </header>
 
-    <section id="about">
+    <section id="about" class="centered">
         <h2>About Me</h2>
-        <p>I am a Computer Science student with a passion for AI and software development. Welcome to my portfolio!</p>
+        <p>I like making software that applies in the real world and helps people.</p>
     </section>
 
     <section id="projects">
