--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <section id="about" class="centered">
         <h2>About Me</h2>
-        <p>I like making software that applies in the real world and helps people.</p>
+        <p>I’m passionate about creating software solutions that make a meaningful impact in the real world and improve people’s lives. 
+            I strive to develop innovative and practical tools that solve everyday challenges and contribute to positive change.</p>
     </section>
 
     <section id="projects">
